[package]
name = "vhost-user-vsock"
version = "0.1.0"
authors = ["Harshavardhan Unnibhavi <harshanavkis@gmail.com>"]
description = "This is a template for creating rust-vmm repositories."
repository = "https://github.com/rust-vmm/crate-template"
readme = "README.md"
keywords = ["vhost", "vsock"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2018"

[dependencies]
clap = "2"
option_parser = { git = "https://github.com/cloud-hypervisor/cloud-hypervisor.git" }